--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -17,7 +17,7 @@
             <div class="row mx-4 pl-5">
                 <div class="col-4" *ngFor="let feature of projectFeatureData; let i= index">
                     <div class="card mt-3 p-2" id="po" style="width:auto; height:auto;">
-                        <button class="boxclose" id="boxclose" (click)="deleteFeature(feature)" [disabled]="isDefaultFeature"></button>
+                        <button class="boxclose" id="boxclose" (click)="deleteFeature(feature)" *ngIf="feature.name!='systementry'"></button>
                         <div class="card-body" [routerLink]="['/feature-details']" [queryParams]="{featureId: feature._id,projectId: project_id}">
                             <div class="row">
                                 <div class="col-lg-4">
