--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.scss
@@ -28,7 +28,7 @@
 }
 
 #dropdown_style {
-    height: 50px;
+    height: 45px;
     border-color: black
 }
 
@@ -48,4 +48,20 @@
     color: #ffffff;
     border-radius: 5px 5px 5px 5px;
     padding: 10px 20px 10px 20px;
+}
+
+.BoldText {
+    padding: 5px 0 10px 5px;
+}
+
+.radio-inline {
+    padding: 10px 0 0 5px;
+}
+
+.TitleText {
+    padding: 5px 0 5px 0;
+}
+
+.col-lg-6 {
+    padding: 0 0 0 25px;
 }
